switched to mouseover event with fixation cross

--- a/stroop.html
+++ b/stroop.html
@@ -1,14 +1,18 @@
 <html>
 <body>
-<script type="text/javascript" src="jquery-1.11.1.js">
-</script>
-<script type="text/javascript" src="jquery-ui-1.11.1/jquery-ui.js">
-</script>
-<script src="stroop.js">
-</script>
+<script type="text/javascript" src="jquery-1.11.1.js"></script>
+<script type="text/javascript" src="jquery-ui-1.11.1/jquery-ui.js"></script>
+<script src="stroop.js"></script>
+
+<link type="text/css" rel="stylesheet" href="stylesheet.css" />
 
 <div id="container">
-
+<div id="red">red</div>
+<div id="green">green</div>
+<div id="word"></div>
+<div id="center-cross">X</div>
+<div id="blue">blue</div>
+<div id="yellow">yellow</div>
 </div>
 </body>
 </html>
